objects/BMCServiceDesk__Configuration_Set_Log__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Sandbox_Org_Id__c</fullName>
        <description>To store Sandbox Organization Id to which connection is done.</description>
        <label>Sandbox Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sandbox_Org_Name__c</fullName>
        <description>To store Sandbox Organization Name to which connection is done.</description>
        <label>Sandbox Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sandbox_Username__c</fullName>
        <description>Sandbox Username using which connection is done.</description>
        <label>Sandbox Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Success_Error_Log__c</fullName>
        <description>To store success/error log while connecting to Sandbox.</description>
        <label>Log</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Success_Error_Status__c</fullName>
        <description>To store success or failure status while importing Configurations from Sandbox.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Configuration Set Log</label>
    <nameField>
        <displayFormat>CSL-{000000}</displayFormat>
        <label>Configuration Set Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Set Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>